@@ -149,7 +149,7 @@ struct ARMCore {
 	int32_t shifterOperand;
 	int32_t shifterCarryOut;
 
-	uint32_t prefetch;
+	uint32_t prefetch[2];
 	enum ExecutionMode executionMode;
 	enum PrivilegeMode privilegeMode;
 
