@@ -227,9 +227,9 @@ static void GBAProcessEvents(struct ARMCore* cpu) {
 		int32_t nextEvent = INT_MAX;
 		int32_t testEvent;
 
-		gba->bus = cpu->prefetch;
+		gba->bus = cpu->prefetch[0];
 		if (cpu->executionMode == MODE_THUMB) {
-			gba->bus |= cpu->prefetch << 16;
+			gba->bus |= cpu->prefetch[0] << 16;
 		}
 
 		if (gba->springIRQ) {
